[ButtonGroup] Fix misalignment in segmented items (#4906)
* Add display flex to ButtonGroup Item in order to fix mis-alignment when segmented

* Update UNRELEASED.md

* Update styling and UNRELEASED.md

* Update Button.scss styles

* Update ButtonGroup Item to use line-height

--- a/src/components/ButtonGroup/ButtonGroup.scss
+++ b/src/components/ButtonGroup/ButtonGroup.scss
@@ -42,6 +42,7 @@ $item-spacing: spacing(tight);
     z-index: z-index(item, $stacking-order);
     margin-top: 0;
     margin-left: 0;
+    line-height: normal;
 
     &:not(:first-child) {
       margin-left: -1 * border-width();
